2009-09-05  Ozkan Sezer  <sezeroz@gmail.com>

	* _findfirst64i32, _findnext64i32, _fstat64i32, _fstat, _stat64i32,
	_stat, _wfindfirst64i32, _wfindnext64i32, _wstat64i32, _wstat: Zero
	the input buffer in case the function we wrap around fails. This
	fixes the native builds of binutils/bfd due to an unitialized use
	warning about a stat structure, too.

2009-09-05  Kai Tietz  <kai.tietz@onevision.com>

	* misc/_crt_veh.c: Removed.
	* crt/crtexe.c (_CRT_VEH): Removed.
	* Makefile.am (misc/_crt_veh.c): Removed.
	* Makefile.in: Regenerated.

2009-09-04  Kai Tietz  <kai.tietz@onevision.com>

	* crt/crt_handler.c: New.
	* crt/crtexe.c (__tmainCRTStartup): Call __mingw_init_ehandler
	for 64-bit case.
	* crt/crtdll.c: Likewise.
	* crt/pesect.c (_FindPESectionByName): New.
	(_FindPESectionExec): New.
	(_GetPEImageBase): New.

2009-09-03  Kai Tietz  <kai.tietz@onevision.com>

	* crt/crtdll.c: Cleanup unused code.
	* crt/crtexe.c: Likewise.

	* Makefile.am: Add file misc/_crt_veh.c.
	* Makefile.in: Regenerated.
	* misc/_crt_veh.c: New.
	* crt/crtexec.c (_CRT_VEH): Use variable to decide
	if vectored exception handling should be used.

2009-08-27  Kai Tietz  <kai.tietz@onevision.com>

	* stdio/_ftime.c: New.
	* lib32/moldname-msvcrt.def: Remove ftime.
	* lib64/moldname-msvcrt.def: Likewise.
	* Makefile.am: Add stdio/_ftime.c to build.
	* Makefile.in: Regenerated.

2009-08-26  Kai Tietz  <kai.tietz@onevision.com>

	* ...: Remove use of _INTEGRAL_MAX_BITS checks <= 64.
	* ...: Cleanup code for _USE_32BIT_TIME_T case.
	* misc/_wctime32.c: New.

2009-08-23  Ozkan Sezer  <sezeroz@gmail.com>

	* Makefile.am: Added math/_chgsignl.S.
	* Makefile.in: Regenerated.

2009-08-23  Kai Tietz  <kai.tietz@onevision.com>

	* math/_chgsignl.S: Implemented _chgsignl().

	* ...: Add missing prototypes.

2009-08-22  Ozkan Sezer  <sezeroz@gmail.com>

	* fstat, stat, wstat: Instead of calling a function, "inline" (copy
	the body of) the called function and avoid the cast which overcomes