@@ -6,7 +6,7 @@
 LONG InterlockedExchangeAdd(LONG volatile *Addend,LONG Value)
 {
   LONG ret;
-  __asm__ ("lock\n\t"
+  __asm__ __volatile__ ("lock\n\t"
            "xaddl %0,(%1)"
            : "=r" (ret)
            : "r" (Addend), "0" (Value)
