@@ -26,7 +26,7 @@ long double expm1l (long double x)
   if (fabsl(x) < LOGE2L)
     {
       x *= LOG2EL;
-      __asm__("f2xm1" : "=t" (x) : "0" (x));
+      __asm__ __volatile__ ("f2xm1" : "=t" (x) : "0" (x));
       return x;
     }
   else
