@@ -8,7 +8,7 @@ int
 __isnanf (float _x)
 {
   unsigned short _sw;
-  __asm__ ("fxam;"
+  __asm__ __volatile__ ("fxam;"
 	   "fstsw %%ax": "=a" (_sw) : "t" (_x) );
   return (_sw & (FP_NAN | FP_NORMAL | FP_INFINITE | FP_ZERO | FP_SUBNORMAL))
     == FP_NAN;
