@@ -6,6 +6,6 @@
 #include <math.h>
 double rint (double x) {
   double retval = 0.0;
-  __asm__ ("frndint;" : "=t" (retval) : "0" (x));
+  __asm__ __volatile__ ("frndint;" : "=t" (retval) : "0" (x));
   return retval;
 }
