@@ -7,6 +7,6 @@
 
 long double rintl (long double x) {
   long double retval = 0.0L;
-  __asm__ ("frndint;": "=t" (retval) : "0" (x));
+  __asm__ __volatile__ ("frndint;": "=t" (retval) : "0" (x));
   return retval;
 }
