@@ -9,7 +9,7 @@ int __signbit (double x);
 
 int __signbit (double x) {
   unsigned short sw;
-  __asm__ ("fxam; fstsw %%ax;"
+  __asm__ __volatile__ ("fxam; fstsw %%ax;"
 	   : "=a" (sw)
 	   : "t" (x) );
   return (sw & __FP_SIGNBIT) != 0;
