@@ -11,11 +11,11 @@ trunc (double _x){
   double retval = 0.0;
   unsigned short saved_cw;
   unsigned short tmp_cw;
-  __asm__ ("fnstcw %0;" : "=m" (saved_cw)); /* save FPU control word */
+  __asm__ __volatile__ ("fnstcw %0;" : "=m" (saved_cw)); /* save FPU control word */
   tmp_cw = (saved_cw & ~(FE_TONEAREST | FE_DOWNWARD | FE_UPWARD | FE_TOWARDZERO))
 	    | FE_TOWARDZERO;
-  __asm__ ("fldcw %0;" : : "m" (tmp_cw));
-  __asm__ ("frndint;" : "=t" (retval)  : "0" (_x)); /* round towards zero */
-  __asm__ ("fldcw %0;" : : "m" (saved_cw) ); /* restore saved control word */
+  __asm__ __volatile__ ("fldcw %0;" : : "m" (tmp_cw));
+  __asm__ __volatile__ ("frndint;" : "=t" (retval)  : "0" (_x)); /* round towards zero */
+  __asm__ __volatile__ ("fldcw %0;" : : "m" (saved_cw) ); /* restore saved control word */
   return retval;
 }
