@@ -13,14 +13,14 @@ int __mingw_has_sse (void);
 
 int fegetenv (fenv_t * envp)
 {
-  __asm__ ("fnstenv %0;": "=m" (*envp));
+  __asm__ __volatile__ ("fnstenv %0;": "=m" (*envp));
  /* fnstenv sets control word to non-stop for all exceptions, so we
     need to reload our env to restore the original mask.  */
-  __asm__ ("fldenv %0" : : "m" (*envp));
+  __asm__ __volatile__ ("fldenv %0" : : "m" (*envp));
   if (__mingw_has_sse ())
     {
       int _mxcsr;
-      __asm__ volatile ("stmxcsr %0" : "=m" (_mxcsr));
+      __asm__ __volatile__ ("stmxcsr %0" : "=m" (_mxcsr));
       envp->__unused0 = (((unsigned int) _mxcsr) >> 16);
       envp->__unused1 = (((unsigned int) _mxcsr) & 0xffff);
     }
