@@ -16,7 +16,7 @@ int vfscanf(FILE * __restrict__ stream, const char * __restrict__ format, va_lis
 {
   int ret;
 #ifdef _WIN64
-  __asm__(
+  __asm__ __volatile__ (
 
     /* allocate stack (esp += frame - arg3 - (8[arg1,2] + 12)) */
     "movq	%%rsp, %%rbx\n\t"
@@ -52,7 +52,7 @@ int vfscanf(FILE * __restrict__ stream, const char * __restrict__ format, va_lis
       "a"(&ret)
     : "rbx", "rdi");
 #else
-  __asm__(
+  __asm__ __volatile__ (
 
     /* allocate stack (esp += frame - arg3 - (8[arg1,2] + 12)) */
     "movl	%%esp, %%ebx\n\t"
